docs/build/iota-sdk/1.0/docs/how-tos/advanced-transactions/claim-transaction.mdx
---
title: Claim Transaction
description: 'How to claim funds'
image: /img/logo/iota_mark_light.png
keywords:
  - how to
  - time-lock
  - storage deposit return
  - unlock conditions
  - claim output
  - nodejs
  - python
  - rust
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

You can use the SDK to send transaction with funds that have to be claimed (for example a
[micro transaction](send-micro-transaction.mdx)). This guide will show you how to claim all claimable outputs in an account.

## Example Code

<Tabs groupId="language" queryString>
<TabItem value="rust" label="Rust">

1. Instantiate a [`Wallet`](https://docs.rs/iota-sdk/latest/iota_sdk/wallet/core/struct.Wallet.html), get Alice's `Account` which was
   [created in the first guide](../accounts-and-addresses/create-account.mdx) and [sync it](../accounts-and-addresses/check-balance.mdx).
2. Retrieve all claimable outputs in the account by calling the [`Account.claimable_outputs()`](https://docs.rs/iota-sdk/latest/iota_sdk/wallet/account/struct.Account.html#method.claimable_outputs)
   function.

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/develop/sdk/examples/how_tos/advanced_transactions/claim_transaction.rs#L37
```

</div>

3. Claim all the outputs in the account by calling the [`Account.claim_outputs()`](https://docs.rs/iota-sdk/latest/iota_sdk/wallet/account/struct.Account.html#method.claim_outputs) function.

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/develop/sdk/examples/how_tos/advanced_transactions/claim_transaction.rs#L43
```

</div>

</TabItem>
<TabItem value="typescript-node" label="Typescript (Node.js)">

1. Instantiate a [`Wallet`](https://docs.rs/iota-sdk/latest/iota_sdk/wallet/core/struct.Wallet.html), get Alice's `Account` which was
   [created in the first guide](../accounts-and-addresses/create-account.mdx) and [sync it](../accounts-and-addresses/check-balance.mdx).
2. Retrieve all claimable outputs in the account by calling the [`Account.claimableOutputs()`](../../references/nodejs/classes/Account.md#claimableoutputs)
   function.

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/develop/bindings/nodejs/examples/how_tos/advanced_transactions/claim_transaction.ts#L32
```

</div>

3. Claim all the outputs in the account by calling the [`Account.claimOutputs()`](../../references/nodejs/classes/Account.md#claimoutputs) function.

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/develop/bindings/nodejs/examples/how_tos/advanced_transactions/claim_transaction.ts#L38
```

</div>

</TabItem>
<TabItem value="python" label="Python">

1. Instantiate a [`Wallet`](https://docs.rs/iota-sdk/latest/iota_sdk/wallet/core/struct.Wallet.html), get Alice's `Account` which was
   [created in the first guide](../accounts-and-addresses/create-account.mdx) and [sync it](../accounts-and-addresses/check-balance.mdx).
2. Retrieve all claimable outputs in the account by calling the [`Account.claimable_outputs()`](../../references/python/iota_sdk/wallet/account.md#claimable_outputs)
   function.

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/develop/bindings/python/examples/how_tos/advanced_transactions/claim_transaction.py#L23
```

</div>

3. Claim all the outputs in the account by calling the [`Account.claim_outputs()`](../../references/python/iota_sdk/wallet/account.md#claim_outputs) function.

<div className={'hide-code-block-extras'}>

```python reference
https://github.com/iotaledger/iota-sdk/blob/develop/bindings/python/examples/how_tos/advanced_transactions/claim_transaction.py#L29
```

</div>

</TabItem>
</Tabs>

### Full Example Code

<Tabs groupId="language" queryString>
<TabItem value="rust" label="Rust">

```rust reference
https://github.com/iotaledger/iota-sdk/blob/develop/sdk/examples/how_tos/advanced_transactions/claim_transaction.rs
```

</TabItem>
<TabItem value="typescript-node" label="Typescript (Node.js)">

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/develop/bindings/nodejs/examples/how_tos/advanced_transactions/claim_transaction.ts
```

</TabItem>
<TabItem value="python" label="Python">

```python reference
https://github.com/iotaledger/iota-sdk/blob/develop/bindings/python/examples/how_tos/advanced_transactions/claim_transaction.py
```

</TabItem>
</Tabs>

### Expected Output

```plaintext
Available outputs to claim:
0xa8652127daebb702c5f7a758452886779156f9983513b604d4df53ba03e2ab4b0000
0x1141f4403c6e6a8f49cf07c5af6a6d84a4434f36d0feabf14955d00ce273e82a0000
0x166977bac6f564694c5ed949ef4d11f076edf03dc26813b54011bf0acd1bd7ec0000
0x4c660f6fdfe839186fd1b1176769f34f6fc9843b9bbe2499694c921303b793600000
0x4f04a922dcac8d22b95f1edb269a0aee056f2fa11bbcf0cbb408f937480e81190000
0xebcc726e9de91de5885aeab1c16b910e3f4044887c4ef594dbf48b44199ba3220000
Transaction sent: 0xee58a362aeb97abfac42e7b44c718ccf15d915456a1eb2046cde89af0d3fd216
Block sent: https://explorer.shimmer.network/testnet/block/0xa51ad0cbe612d5f30ee9c96bbe840cb15ffafa8abdffcd571aa0153448e0ebe7
```
